--- a/mtm6201/landing-page/css/style.css
+++ b/mtm6201/landing-page/css/style.css
@@ -308,7 +308,7 @@ h3 {
 
 /* set all button detail, Only set their commonality */
 button {
-    width: 100%;
+    text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
     /* text-align: center; */
@@ -320,7 +320,7 @@ button {
 }
 
 /* only set "drive with us" button - Separate requirements*/
-.drive {
+.drive{
     /* Press the button width to fill the Form */
     width: 100%;
     background-color: #57EEAB;
