--- a/mtm6201/mtm6201-prototype-master/css/home.css
+++ b/mtm6201/mtm6201-prototype-master/css/home.css
@@ -1,1 +1,119 @@
+
+*{
+box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto', sans-serif, Arial, Helvetica;
+    font-size: 1rem;/*16px */
+}
+
+header{
+    background-color:#FFFFFF;
+    width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+}
+
+.container{
+    width: 85%;
+    /* Center Container */
+	margin: 0 auto;
+    padding-top: 5%;
+    background-color:#E5E6E7;
+}
+
+.logo{
+    margin: 1rem;/*16px */
+    
+}
+
+li{
+    list-style: none;
+    margin: 0.3 rem;/*5px*/
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    padding: 0.3 rem;/*5px*/
+    font-size: 1.5rem;
+    color: black;
+}
+
+a:hover {
+    background-color:#C78174;
+    margin: 0.3 rem;/*5px*/
+    color: #FFFFFF;
+}
+
+.btn{
+    background-color: #804A40;
+    color: #FFFFFF;
+    width:max-content;
+    height: auto;
+    border: none;
+    text-align: center;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-size: 1.625rem; /*26px*/   
+    font-weight: 500;
+    border-radius: 0.688rem;
+    margin: 0 auto;
+}
+
+.banner{
+    background-color: #C78174;
+    width: 100%;
+    height: auto;
+    padding-bottom: 8%;
+}
+
+div .b-img{
+width: 80%;
+margin-top: 10%;
+margin-left: 10%;
+margin-right: 10%;
+}
+
+h1{
+    font-family:'Roboto', sans-serif, Arial, Helvetica; 
+    font-size: 2.5rem;/*40px*/
+    font-weight:700;
+    color: #FFFFFF;
+    text-align: center;    
+}
+
+.b p{
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 1.625rem; /*26px*/   
+    font-weight: 500;
+}
+
+h2{
+  font-size: 1.625rem; /*26px*/ 
+  font-weight: 700;
+  margin-left: 10%;
+}
+
+.iteam{
+    background-image: url(small-bg.jpg);
+}
+.treats,
+.b-cake,
+.spooning,
+.cone,
+.sundae,
+.cone2{ 
+  width: 100%;
+  margin: 0 auto;
+}
+    
 /*font-family: 'Lobster', cursive;*/
+footer .container{
+    background-color:#C78174;
+    width: 100%;
+}
