frist time validator

--- a/mtm6201/mtm6201-prototype-master/css/contact.css
+++ b/mtm6201/mtm6201-prototype-master/css/contact.css
@@ -14,10 +14,6 @@ header {
     height: auto;
 }
 
-section {
-    margin-bottom: 5%;
-}
-
 .container {
     width: 100%;
     /* Center Container */
@@ -27,6 +23,7 @@ section {
     padding-bottom: 3%;
     background-color: #E5E6E7;
 }
+
 
 .logo {
     margin: 1rem;
@@ -44,24 +41,30 @@ li {
 a {
     width: 100%;
     text-decoration: none;
+
     font-size: 1.5rem;
     color: black;
     margin: 0 auto;
 }
 
 a:hover {
-    width: 100%;
+    width: fit-content;
+    display: inline;
+    flex-wrap: nowrap;
     background-color: #C78174;
-    margin: 0.3 rem;
+    margin: 0.3rem;
     /*5px*/
     color: #FFFFFF;
+}
+
+.login {
+    display: inline;
 }
 
 .btn {
     background-color: #804A40;
     color: #FFFFFF;
-    width: fit-content;
-    display: inline;
+    width: max-content;
     height: auto;
     border: none;
     text-align: center;
@@ -80,113 +83,24 @@ a:hover {
     width: 100%;
 }
 
-h1 {
-    font-family: 'Roboto', sans-serif, Arial, Helvetica;
-    font-size: 2.5rem;
-    /*40px*/
-    font-weight: 700;
-    color: black;
-    text-align: center;
-}
-
-.cf {
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    background: url(../images/small-bg.jpg) no-repeat;
-    background-size: cover;
-    /* Attaches one drop-shadows to the box with color and angle. */
-    box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
-    -webkit-box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
-    /* Set the border to rounded corners*/
-    border-radius: 0.688rem;
-    -webkit-border-radius: 0.688rem;
-}
-
-input,
-textarea {
-    background-color: aliceblue;
-    width: 100%;
-    height: auto;
-    padding: 1rem;
-    border: none;
-    border-radius: 0.688rem;
-    margin: 0 auto;
-    margin-top: 1rem;
-}
-
-textarea {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 1rem;
-}
-
-.m {
-    width: 85%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    align-items: center;
-}
-
-.m .box:nth-child(1) {
-    width: 100%;
-    grid-column: 1/2;
-    grid-row: 1/2;
-    margin-left: 0%;
-
-}
-
-.m .box:nth-child(2) {
-    width: 100%;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    margin-left: 0%;
-
-}
-
-
-footer .container {
-    background-color: #C78174;
-    width: 100%;
-    height: auto;
-}
-
-
-
+.login input,
+.go,
 .search {
+    width: auto;
+    font-size: 1rem;
+    /*18px*/
+    padding: 0.3rem;
+    border-radius: 0.5rem;
+
+}
+
+.input-search {
     display: inline;
     padding: 0.5rem;
-    width: fit-content;
 }
 
 .go {
     margin-left: 0.5rem;
-}
-
-.icons {
-    display: flex;
-    /*aligns the flexible container's items 
-            Items are positioned in the center of the container */
-    justify-content: flex-start;
-    /*align the items vertically. 
-            Items are positioned at the end of the container */
-    align-items: flex-end;
-    margin-top: 3%;
-
-}
-
-.icons .block {
-    margin: 1.5rem;
-
-}
-
-.copyright {
-    display: flex;
-    justify-content: center;
-    font-size: 1.125rem;
-    /*18px*/
 }
 
 .nav {
@@ -207,7 +121,7 @@ footer .container {
 
 .nav .block:nth-child(2) {
     width: 100%;
-    grid-column: 4/7;
+    grid-column: 3/7;
     grid-row: 1/2;
 }
 
@@ -217,6 +131,102 @@ footer .container {
     grid-row: 2/3;
     margin: 0 auto;
 }
+
+h1 {
+    font-family: 'Roboto', sans-serif, Arial, Helvetica;
+    font-size: 2.5rem;
+    /*40px*/
+    font-weight: 700;
+    color: black;
+    text-align: center;
+    padding-top: 0%;
+}
+
+.cf {
+    width: 85%;
+    height: auto;
+    margin: 0 auto;
+    padding: 1rem;
+    background: url(../images/small-bg.jpg) no-repeat;
+    background-size: cover;
+    /* Attaches one drop-shadows to the box with color and angle. */
+    box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
+    -webkit-box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
+    /* Set the border to rounded corners*/
+    border-radius: 0.688rem;
+    -webkit-border-radius: 0.688rem;
+    margin-bottom: 5%;
+}
+
+.form-iteam input,
+.form-iteam textarea {
+    background-color: aliceblue;
+    width: 100%;
+    height: auto;
+    padding: 1rem;
+    border: none;
+    border-radius: 0.688rem;
+    margin: 0 auto;
+    margin-top: 1rem;
+}
+
+.form-iteam textarea {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1rem;
+}
+
+iframe {
+    width: 100%;
+}
+
+.box-2 {
+    width: 85%;
+    margin: 0 auto;
+    margin-top: 5%;
+    border-radius: 1rem;
+}
+
+.m {
+    display: flex;
+    flex-direction: column;
+}
+
+footer .container {
+    background-color: #C78174;
+    height: min-content;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.go {
+    margin-left: 0.5rem;
+}
+
+.icons {
+    display: flex;
+    /*aligns the flexible container's items 
+            Items are positioned in the center of the container */
+    justify-content: flex-start;
+    /*align the items vertically. 
+            Items are positioned at the end of the container */
+    align-items: flex-end;
+
+}
+
+.icons .block {
+    margin: 1.5rem;
+
+}
+
+.copyright {
+    display: flex;
+    justify-content: center;
+    font-size: 1.125rem;
+    margin-top: 0%;
+    /*18px*/
+}
+
 
 /****************************************************************************/
 /*******************Tablet Styling******************************************/
@@ -250,7 +260,7 @@ footer .container {
         padding-right: 1rem;
         font-size: 1.5rem;
         font-weight: 700;
-        margin: 0.3 rem;
+        margin: 0.3rem;
         /*5px*/
         color: #FFFFFF;
     }
@@ -273,7 +283,7 @@ footer .container {
 
     .nav .block:nth-child(2) {
         width: 100%;
-        grid-column: 9/13;
+        grid-column: 10/13;
         grid-row: 1/2;
     }
 
@@ -283,50 +293,35 @@ footer .container {
         grid-row: 1/2;
     }
 
-    input,
-    textarea {
-    background-color: aliceblue;
-    width: 100%;
-    height: auto;
-    padding: 1rem;
-    border: none;
-    border-radius: 0.688rem;
-    margin: 0 auto;
-    margin-top: 1rem;
-}
-
-.textarea {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 1rem;
-}
-
-   .main {
+    .m {
         width: 85%;
-        height: 100%;
+        height: auto;
         margin: 0 auto;
         display: grid;
-        grid-gap: 1rem;
+        align-items: center;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(1, 1fr);
-        align-items: center;
     }
-    
-    .main .section:nth-child(1) {
+
+    .m .box:nth-child(1) {
         width: 100%;
+        height: 100%;
         grid-column: 1/2;
         grid-row: 1/2;
-        margin-left: 0%;
     }
-    
-    .main .section:nth-child(2) {
+
+
+    .m .box:nth-child(2) {
         width: 100%;
         height: 100%;
         grid-column: 2/3;
         grid-row: 1/2;
+        align-items: center;
+        /* margin-top: 0%; */
     }
-    
-   
+
+
+
     .f {
         width: 85%;
         display: grid;
@@ -373,7 +368,7 @@ footer .container {
             font-size: 1.5rem;
         }
 
-       
+
 
         .f {
             width: 85%;
