--- a/mtm6201/mtm6201-prototype-master/css/home.css
+++ b/mtm6201/mtm6201-prototype-master/css/home.css
@@ -1,38 +1,36 @@
-
-*{
-box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Roboto', sans-serif, Arial, Helvetica;
-    font-size: 1rem;/*16px */
+    font-size: 1rem;
+    /*16px */
 }
 
-header{
-    background-color:#FFFFFF;
+header {
+    background-color: #FFFFFF;
     width: 100%;
     height: auto;
 }
 
-section{
-    margin-bottom: 5%;
-}
-
-.container{
+.container {
     width: 100%;
     /* Center Container */
-	margin: 0 auto;
+    margin: 0 auto;
     padding-top: 5%;
     padding-left: 8%;
     padding-bottom: 3%;
-    background-color:#E5E6E7;
+    background-color: #E5E6E7;
 }
 
-.logo{
-    margin: 1rem;/*16px */   
+
+.logo {
+    margin: 1rem;
+    /*16px */
 }
 
-li{
+li {
     width: 100%;
     font-size: 0.5rem;
     list-style: none;
@@ -40,10 +38,10 @@ li{
     text-align: center;
 }
 
-a{
+a {
     width: 100%;
     text-decoration: none;
-    
+
     font-size: 1.5rem;
     color: black;
     margin: 0 auto;
@@ -51,19 +49,20 @@ a{
 
 a:hover {
     width: 100%;
-    background-color:#C78174;
-    margin: 0.3 rem;/*5px*/
+    background-color: #C78174;
+    margin: 0.3rem;
+    /*5px*/
     color: #FFFFFF;
 }
 
-.login{
+.login {
     display: inline;
 }
 
-.btn{
+.btn {
     background-color: #804A40;
     color: #FFFFFF;
-    width:max-content;
+    width: max-content;
     height: auto;
     border: none;
     text-align: center;
@@ -71,13 +70,14 @@ a:hover {
     padding-bottom: 0.2rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    font-size: 1.625rem; /*26px*/   
+    font-size: 1.625rem;
+    /*26px*/
     font-weight: 500;
     border-radius: 0.688rem;
     margin: 0 auto;
 }
 
-.banner{
+.banner {
     background-color: #C78174;
     width: 100%;
     height: auto;
@@ -85,36 +85,39 @@ a:hover {
     margin-bottom: 0%;
 }
 
- .b-img{
-width: 80%;
-margin-top: 10%;
-margin-left: 10%;
-margin-right: 10%;
+.b-img {
+    width: 80%;
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-h1{
-    font-family:'Roboto', sans-serif, Arial, Helvetica; 
-    font-size: 2.5rem;/*40px*/
-    font-weight:700;
-    color: #FFFFFF;
-    text-align: center;    
-}
-
-.b p{
+h1 {
+    font-family: 'Roboto', sans-serif, Arial, Helvetica;
+    font-size: 2.5rem;
+    /*40px*/
+    font-weight: 700;
     color: #FFFFFF;
     text-align: center;
-    font-size: 1.625rem; /*26px*/   
+}
+
+.b p {
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 1.625rem;
+    /*26px*/
     font-weight: 500;
 }
 
-h2{
-  font-size: 1.625rem; /*26px*/ 
-  font-weight: 700;
-  margin-left: 10%;
+h2 {
+    font-size: 1.625rem;
+    /*26px*/
+    font-weight: 700;
+    margin-left: 10%;
 }
 
-.iteam{
-margin-bottom: 8%;
+.iteam {
+    margin-bottom: 8%;
 }
 
 .treats,
@@ -122,23 +125,23 @@ margin-bottom: 8%;
 .spooning,
 .cone,
 .sundae,
-.cone2{
+.cone2 {
     width: 90%;
     height: 90%;
     background: url(../images/small-bg.jpg) no-repeat;
-    background-size:cover;
+    background-size: cover;
     padding-bottom: 5%;
     border-radius: 1rem;
 }
 
 .new1,
-.new2{
+.new2 {
     width: 90%;
     background-color: #FFFFFF;
 }
 
 .chocolate,
-.yogurt{
+.yogurt {
     width: 90%;
     height: auto;
     background-color: #C78174;
@@ -148,77 +151,86 @@ margin-bottom: 8%;
 }
 
 .chocolate p,
-.yogurt p{
+.yogurt p {
     color: #FFFFFF;
     text-align: center;
-    font-size: 1.625rem; /*26px*/   
+    font-size: 1.625rem;
+    /*26px*/
     font-weight: 500;
 }
 
-.trynew{
+.try {
     display: flex;
     flex-direction: column;
 }
-.trynew .new:nth-child(4){
-    order: 2;
+
+.try .new:nth-child(3) {
+    order: 3;
+
 }
 
-footer .container{
-    background-color:#C78174;
+footer .container {
+    background-color: #C78174;
     width: 100%;
     height: auto;
 }
 
-h3{
-    font-size: 1.625rem; /*26px*/ 
+h3 {
+    font-size: 1.625rem;
+    /*26px*/
     font-weight: 700;
     margin-bottom: 0.5rem;
 }
 
-input, .go, .search{
+input,
+.go,
+.search {
     width: fit-content;
-    font-size: 1rem;/*18px*/
+    font-size: 1rem;
+    /*18px*/
     padding: 0.3rem;
-    border-radius: 0.5rem; 
-    display: inline; 
+    border-radius: 0.5rem;
+    display: inline;
 }
-input{
+
+input {
     width: 85%;
 }
 
-.search{
+.search {
     display: inline;
     padding: 0.5rem;
 }
 
-.go{
-   margin-left: 0.5rem;
+.go {
+    margin-left: 0.5rem;
 }
 
-.icons{
-        display: flex;
-        /*aligns the flexible container's items 
+.icons {
+    display: flex;
+    /*aligns the flexible container's items 
         Items are positioned in the center of the container */
-        justify-content:flex-start;
-        /*align the items vertically. 
+    justify-content: flex-start;
+    /*align the items vertically. 
         Items are positioned at the end of the container */
-        align-items: flex-end;
-        margin-top: 3%;
-        
+    align-items: flex-end;
+    margin-top: 3%;
+
 }
 
-.icons .block{
+.icons .block {
     margin: 1.5rem;
 
 }
 
-.copyright{
+.copyright {
     display: flex;
-    justify-content:center;
-    font-size: 1.125rem;/*18px*/
+    justify-content: center;
+    font-size: 1.125rem;
+    /*18px*/
 }
 
-.nav{
+.nav {
     width: 85%;
     margin: 0 auto;
     display: grid;
@@ -227,21 +239,21 @@ input{
     align-items: center;
 }
 
-.nav .block:nth-child(1){
+.nav .block:nth-child(1) {
     width: 100%;
     grid-column: 1/2;
     grid-row: 1/2;
     margin-left: 0%;
 }
 
-.nav .block:nth-child(2){
-    width:100%;
+.nav .block:nth-child(2) {
+    width: 100%;
     grid-column: 4/7;
     grid-row: 1/2;
 }
 
-.nav .block:nth-child(3){
-    width:100%;
+.nav .block:nth-child(3) {
+    width: 100%;
     grid-column: 3/5;
     grid-row: 2/3;
     margin: 0 auto;
@@ -254,15 +266,15 @@ input{
 /* Set the flat screen size of tablet */
 @media only screen and (min-width: 768px) {
 
-    li{
+    li {
         width: 100%;
         list-style: none;
         margin-left: 10%;
         text-align: center;
         display: inline;
     }
-    
-    a{
+
+    a {
         width: 100%;
         height: auto;
         text-decoration: none;
@@ -272,20 +284,21 @@ input{
         color: black;
         margin: 0 auto;
     }
-    
+
     a:hover {
         width: 100%;
         display: inline;
-        background-color:#C78174;
+        background-color: #C78174;
         padding-left: 1rem;
         padding-right: 1rem;
         font-size: 1.5rem;
         font-weight: 700;
-        margin: 0.3 rem;/*5px*/
+        margin: 0.3rem;
+        /*5px*/
         color: #FFFFFF;
     }
 
-    .nav{
+    .nav {
         width: 85%;
         height: auto;
         margin: 0 auto;
@@ -293,27 +306,27 @@ input{
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(1, 1fr);
     }
-    
-    .nav .block:nth-child(1){
+
+    .nav .block:nth-child(1) {
         width: 100%;
         grid-column: 1/2;
         grid-row: 1/2;
         margin-left: 0%;
     }
-    
-    .nav .block:nth-child(2){
-        width:100%;
+
+    .nav .block:nth-child(2) {
+        width: 100%;
         grid-column: 10/13;
         grid-row: 1/2;
     }
-    
-    .nav .block:nth-child(3){
-        width:100%;
+
+    .nav .block:nth-child(3) {
+        width: 100%;
         grid-column: 4/10;
-        grid-row: 1/2;        
+        grid-row: 1/2;
     }
 
-    .banner{
+    .banner {
         display: grid;
         height: auto;
         margin: 0 auto;
@@ -324,231 +337,245 @@ input{
         padding-bottom: 0%;
     }
 
-    .banner .b:nth-child(1){
+    .banner .b:nth-child(1) {
         width: 100%;
         height: 90%;
         margin: 0 auto;
         grid-column: 2/5;
         grid-row: 2/6;
     }
-    .banner .b:nth-child(2){
+
+    .banner .b:nth-child(2) {
         width: 100%;
         height: auto;
         grid-column: 5/8;
         grid-row: 2/5;
     }
 
-    .banner .b:nth-child(3){
+    .banner .b:nth-child(3) {
         width: fit-content;
         height: auto;
         grid-column: 5/8;
         grid-row: 5/6;
     }
 
-    .container{
+    .container {
         padding-left: 0%;
         width: 100%;
     }
 
-    .featured{
+    .featured {
         display: grid;
         height: auto;
         margin: 0 auto;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        align-items: center;      
-        grid-gap:0.6rem; 
+        align-items: center;
+        grid-gap: 0.6rem;
         margin-left: 3%;
         margin-right: 3%;
     }
-    .featured .iteam:nth-child(1){
+
+    .featured .iteam:nth-child(1) {
         width: 100%;
-        height:  auto;
+        height: auto;
         margin: 0 auto;
         grid-column: 1/2;
         grid-row: 1/2;
     }
 
-    .featured .iteam:nth-child(2){
+    .featured .iteam:nth-child(2) {
         width: 100%;
-        height:  auto;
+        height: auto;
         margin: 0 auto;
         margin-left: 0;
         grid-column: 2/3;
         grid-row: 1/2;
     }
-    .featured .iteam:nth-child(3){
+
+    .featured .iteam:nth-child(3) {
         width: 100%;
-        height:  auto;
+        height: auto;
         margin: 0 auto;
         margin-left: 0;
         grid-column: 3/4;
         grid-row: 1/2;
     }
 
-    .featured .iteam:nth-child(4){
+    .featured .iteam:nth-child(4) {
         width: 100%;
-        height:  auto;
+        height: auto;
         margin: 0 auto;
         grid-column: 1/2;
         grid-row: 2/3;
     }
-    .featured .iteam:nth-child(5){
+
+    .featured .iteam:nth-child(5) {
         width: 100%;
-        height:  auto;
+        height: auto;
         margin: 0 auto;
         margin-left: 0;
         grid-column: 2/3;
         grid-row: 2/3;
     }
-    .featured .iteam:nth-child(6){
+
+    .featured .iteam:nth-child(6) {
         width: 100%;
-        height:  auto;
+        height: auto;
         margin: 0 auto;
         margin-left: 0;
         grid-column: 3/4;
         grid-row: 2/3;
     }
 
-    .try{
+    .try {
         display: grid;
         height: auto;
         margin: 0 auto;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        align-items: center;  
+        align-items: center;
         margin-left: 3%;
-        margin-right: 3%;    
+        margin-right: 3%;
     }
-    .try .new:nth-child(1){
+
+    .try .new:nth-child(1) {
         width: 100%;
         height: 100%;
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    .try .new:nth-child(2){
+
+    .try .new:nth-child(2) {
         width: 100%;
         height: 100%;
         grid-column: 2/3;
         grid-row: 1/2;
     }
-    .try .new:nth-child(3){
+
+    .try .new:nth-child(3) {
         width: 100%;
         height: 100%;
         grid-column: 1/2;
         grid-row: 2/3;
     }
-    .try .new:nth-child(4){
+
+    .try .new:nth-child(4) {
         width: 100%;
         height: 100%;
         grid-column: 2/3;
         grid-row: 2/3;
     }
 
-    .f{
+    .f {
         width: 85%;
         display: grid;
         height: auto;
         margin: 0 auto;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(1, 1fr);
-        align-items: center;   
+        align-items: center;
     }
 
-    .f .fset:nth-child(1){
+    .f .fset:nth-child(1) {
         width: 100%;
         height: 100%;
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    .f .fset:nth-child(2){
+
+    .f .fset:nth-child(2) {
         width: 100%;
         height: 100%;
         grid-column: 5/7;
         grid-row: 1/2;
     }
 
-    .icons{
-    display: flex;
-    justify-content:center;
+    .icons {
+        display: flex;
+        justify-content: center;
     }
 
     /****************************************************************************/
-/*******************Desktop Styling******************************************/
-/****************************************************************************/
+    /*******************Desktop Styling******************************************/
+    /****************************************************************************/
 
-/* Set the flat screen size of Desktop */
-@media only screen and (min-width: 1280px) {
-    /* For desktop: */
-    h1{
-        font-size: 3rem;/*48px*/
-    }
+    /* Set the flat screen size of Desktop */
+    @media only screen and (min-width: 1280px) {
 
-    a{
-        font-size: 1.5rem;   
-    }
-    
-    .banner{
-        display: grid;
-        height: auto;
-        margin: 0 auto;
-        width: 100%;
-        grid-template-columns: repeat(9, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        align-items: center;
-        padding-bottom: 0%;
-    }
+        /* For desktop: */
+        h1 {
+            font-size: 3rem;
+            /*48px*/
+        }
 
-    .banner .b:nth-child(1){
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        grid-column: 1/5;
-        grid-row: 1/2;
-    }
-    .banner .b:nth-child(2){
-        width: 100%;
-        height: auto;
-        grid-column: 5/8;
-        grid-row: 1/2;
-    }
+        a {
+            font-size: 1.5rem;
+        }
 
-    .banner .b:nth-child(3){
-        width: fit-content;
-        height: auto;
-        grid-column: 8/10;
-        grid-row: 1/2;
-    }
+        .banner {
+            display: grid;
+            height: auto;
+            margin: 0 auto;
+            width: 100%;
+            grid-template-columns: repeat(9, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            align-items: center;
+            padding-bottom: 0%;
+        }
 
-    .f{
-        width: 85%;
-        display: grid;
-        height: auto;
-        margin: 0 auto;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        align-items: center;   
-    }
+        .banner .b:nth-child(1) {
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            grid-column: 1/5;
+            grid-row: 1/2;
+        }
 
-    .f .fset:nth-child(1){
-        width: 100%;
-        height: 100%;
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-    .f .fset:nth-child(2){
-        width: 100%;
-        height: 100%;
-        grid-column: 3/5;
-        grid-row: 1/2;
-    }
+        .banner .b:nth-child(2) {
+            width: 100%;
+            height: auto;
+            grid-column: 5/8;
+            grid-row: 1/2;
+        }
 
-    .icons{
-    display: flex;
-    justify-content:flex-end;
-    margin-right: 8%;
-    margin-left: 8%; 
+        .banner .b:nth-child(3) {
+            width: fit-content;
+            height: auto;
+            grid-column: 8/10;
+            grid-row: 1/2;
+        }
+
+        .f {
+            width: 85%;
+            display: grid;
+            height: auto;
+            margin: 0 auto;
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            align-items: center;
+        }
+
+        .f .fset:nth-child(1) {
+            width: 100%;
+            height: 100%;
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+
+        .f .fset:nth-child(2) {
+            width: 100%;
+            height: 100%;
+            grid-column: 3/5;
+            grid-row: 1/2;
+        }
+
+        .icons {
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 8%;
+            margin-left: 8%;
+        }
     }
-}
 
 }
