--- a/mtm6201/mtm6201-prototype-master/css/contact.css
+++ b/mtm6201/mtm6201-prototype-master/css/contact.css
@@ -41,24 +41,33 @@ li {
 a {
     width: 100%;
     text-decoration: none;
-
     font-size: 1.5rem;
     color: black;
     margin: 0 auto;
+    font-weight: 700;
 }
 
 a:hover {
-    width: fit-content;
-    display: inline;
-    flex-wrap: nowrap;
+    width: 100%;
     background-color: #C78174;
-    margin: 0.3rem;
+    padding: 0.5rem;
+    margin: 3%;
     /*5px*/
     color: #FFFFFF;
+    transform: scale(1.5);
+    border-radius: 0.688rem;
+    box-shadow: rgb(8, 8, 8) 0 0px 20px -1px;
 }
 
 .login {
     display: inline;
+}
+
+main{
+    width: 100%;
+    background-color: #E5E6E7;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .btn {
